--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><HTML ⚡ lang="id"><head><meta charset='utf-8'/><meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/><meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/><meta content='website' property='og:type'/><meta content='158' property='og:image:width'/><meta content='158' property='og:image:height'/><meta content='summary_large_image' name='twitter:card'/><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript><script async='async' src='https://cdn.ampproject.org/v0.js'></script>
+<!DOCTYPE html><HTML ⚡ lang="id"><head><meta charset='utf-8'/><meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/><meta content='IE=9; IE=8; IE=7; IE=EDGE; chrome=1' http-equiv='X-UA-Compatible'/><meta content='website' property='og:type'/><meta content='158' property='og:image:width'/><meta content='158' property='og:image:height'/><meta content='summary_large_image' name='twitter:card'/><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate='amp-boilerplate'>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript><script async='async' src='https://cdn.ampproject.org/v0.js'></script><script async='async' custom-element='amp-iframe' src='https://cdn.ampproject.org/v0/amp-iframe-0.1.js'></script>
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
@@ -74,7 +74,8 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .tlepong a:link,.tlepong a:visited{display: block;line-height: 1em;color: #ed1a23;text-shadow: 1px 1px #fbfbfb;}
 .tlepong b{font-size: 66px;}
 .tlepong svg{vertical-align: -12px;margin: 0 10px 0 0;}
-  
+
+#lokasi{margin:-70px 0 0;padding:100px 0 30px}
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
@@ -168,6 +169,12 @@ footer {padding: 10px;}
 <p>Untuk berbagai kalangan pun kami memberikan harga dan kualitas yang baik, harga sewa sound system hajatan mialnya, kami memberikan paket komplit seperti tenda/layos kursi peralatan makan(prasmanan) penerangan dan sebagainya, tentunya dengan harga pas untuk wilayah brebes.</p>
 <h5>harga sewa sound system untuk konser</h5>
 <p>Untuk even besarpun kami sanggup memberikan  dan memenuhi standard kualitas sound system yang baik, seperti harga sewa sound system untuk konser  kami berikan harga murah se wilayah brebes.</p>
+</div>
+
+<div id='lokasi'>
+<div class='nengah'>
+<amp-iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.637391863084!2d108.879484514773!3d-6.933869694990231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539247756695" frameborder='0' height='100' layout='responsive' resizable='resizable' sandbox='allow-forms allow-scripts allow-same-origin allow-modals allow-popups' width='200'></amp-iframe>
+</div>
 </div>
   
 <footer>Copyright © 2018 | <a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'>KENCANA Sound System</a></footer>
