--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ footer {padding: 10px;}
 
 <div id='lokasi'>
 <div class='nengah'>
-<amp-iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.637391863084!2d108.879484514773!3d-6.933869694990231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539247756695" frameborder='0' height='100' layout='responsive' resizable='resizable' sandbox='allow-forms allow-scripts allow-same-origin allow-modals allow-popups' width='200'></amp-iframe>
+<amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.623288601563!2d108.88036427892436!3d-6.935547124794509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539248349636"> </amp-iframe>
 </div>
 </div>
   
