--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ header {max-width: 96px;padding: 10px;}
 #layanan {min-height: auto;margin: -50px 0 0;padding: 50px 0 0;}
 #layanan p.ats {margin: 0 0 5px;}
 #layanan b {line-height: 1;margin: 0 0 10px;}
-.layanan {width: calc(50% - 10px);margin: 5px;}
+.layanan {width: calc(33.3% - 10px);margin: 5px;}
 .layanan p {margin: 10px;}
 footer {padding: 10px;}
 }
@@ -146,6 +146,14 @@ footer {padding: 10px;}
 <div class='layanan'>
 <amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Tenda/Layos</p>
+</div>
+<div class='layanan'>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/prasmanan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<p>Prasmanan</p>
+</div>
+<div class='layanan'>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/dekorpelaminan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<p>Pelaminan</p>
 </div>
 </div>
 </div>
