--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 #endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}header{float:left;max-width: 160px;width:100%;padding: 10px 18px;}.navi{float:right;}.navi input{display:none;}.navi ul{margin:0;padding:0}.navi li {display: inline-block; position: relative; z-index: 10;}.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}.navi li a:link,.menu li a:visited {color: #777;}.navi li a:hover{color: #444;}.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}.navi li:hover:before{width:100%}
 #propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek b {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
-#layanan{margin:-70px 0 0;padding:70px 0 0;min-height:calc(100vh - 70px);text-align:center;}
-#layanan p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
-#layanan b {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;}
+#layanan{margin:-70px 0 0;padding:70px 0 0;text-align:center;}
+p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
+#layanan b {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;display: block;}
 .layanan{float:left; width:calc(33.3% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
@@ -84,16 +84,22 @@ header {max-width: 96px;padding: 10px;}
 .navi{margin: 0 5px 0 0;}
 .navi li a {font-size: 11px;padding:19px 5px 18px;}
 #propil {padding: 50px 0 0;}
-.propiltek {padding: 40px 5%;bottom: 10%;}
+.propiltek {position: inherit;padding: 25px 10px;bottom: auto;background: #c44d52;}
 .propiltek p {line-height: 1.1;}
 .propiltek b {line-height: 1.3;}
-.propilbg {min-height: calc(100vh - 50px);}
+.propilbg {background-attachment: scroll;min-height: 250px;height: 250px;}
 .nengah {padding: 20px 5px;}
-#layanan {min-height: auto;margin: -50px 0 0;padding: 50px 0 0;}
-#layanan p.ats {margin: 0 0 5px;}
+#layanan {margin: -50px 0 0;padding: 50px 0 0;}
+p.ats {margin: 0 0 5px;}
 #layanan b {line-height: 1;margin: 0 0 10px;}
-.layanan {width: calc(25% - 10px);margin: 5px;}
+.layanan {width: calc(50% - 10px);margin: 5px;}
 .layanan p {margin: 10px;}
+#telepon {height: 231px;}
+#telepon p {line-height: 1;}
+.tlepong {width: calc(100% - 20px);top: 20px;padding: 0 10px;}
+.tlepong svg {vertical-align: 0;margin: 0 0 13px;}
+.tlepong b {font-size: 37px;display: block;}
+amp-iframe{padding: 0 10px;}
 footer {padding: 10px;}
 }
 </style>
@@ -181,6 +187,7 @@ footer {padding: 10px;}
 
 <div id='lokasi'>
 <div class='nengah'>
+<p class='ats'>Lokasi Kami</p>
 <amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.623288601563!2d108.88036427892436!3d-6.935547124794509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539248349636"> </amp-iframe>
 </div>
 </div>
