--- a/index.html
+++ b/index.html
@@ -65,18 +65,15 @@ p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0
 .layanan{float:left; width:calc(33.3% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
-
 #phone{margin:-70px 0 0;padding: 70px 0 0;}
 #telepon{background-image: url(https://kencanabrebes.github.io/soundsystem/tendalayos_contact.png);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
 #telepon:before {content: "";background-color: rgba(0,0,0,.2);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
 .tlepong{width: 100%;position: absolute;top: 50px;left: 0;z-index: 2;}
 #telepon p {font-size: 30px;color: #fff;text-shadow: 1px 1px #191919;margin: 0 0 30px;}
-.tlepong a:link,.tlepong a:visited{display: block;line-height: 1em;color: #ed1a23;text-shadow: 1px 1px #fbfbfb;}
+.tlepong a:link,.tlepong a:visited{display: block;line-height: 1em;color: #ed1a23;text-shadow: 1px 1px #fbfbfb;text-decoration: none;}
 .tlepong b{font-size: 66px;}
 .tlepong svg{vertical-align: -12px;margin: 0 10px 0 0;}
-
-#lokasi{margin:-70px 0 0;padding:100px 0 30px}
-  
+#lokasi{margin:-70px 0 0;padding:100px 0 30px;text-align: center;}
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
 @media screen and (max-width: 1005px){
@@ -94,12 +91,12 @@ p.ats {margin: 0 0 5px;}
 #layanan b {line-height: 1;margin: 0 0 10px;}
 .layanan {width: calc(50% - 10px);margin: 5px;}
 .layanan p {margin: 10px;}
-#telepon {height: 231px;}
+#telepon {height: 228px;}
 #telepon p {line-height: 1;}
 .tlepong {width: calc(100% - 20px);top: 20px;padding: 0 10px;}
 .tlepong svg {vertical-align: 0;margin: 0 0 13px;}
 .tlepong b {font-size: 37px;display: block;}
-amp-iframe{padding: 0 10px;}
+#lokasi {margin: -50px 0 0;padding: 40px 5px 0;}
 footer {padding: 10px;}
 }
 </style>
