--- a/index.html
+++ b/index.html
@@ -55,16 +55,31 @@
 body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
 .nengah{max-width:1006px;margin:0 auto;padding: 20px 0;overflow: hidden;}
 .resik{clear:both}.ting{height:0;width:0;overflow:hidden;position:absolute:top:0;left:0;}
+p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 
-#endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}.navi{float:right;}.navi input{display:none;}.navi ul{margin:0;padding:0}.navi li {display: inline-block; position: relative; z-index: 10;}.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}.navi li a:link,.menu li a:visited {color: #777;}.navi li a:hover{color: #444;}.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}.navi li:hover:before{width:100%}
-#propil{position:relative;padding: 70px 0 0;}.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}.propiltek b {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
+#endas{background:#fbfbfb;position:fixed;top:0;right:0;left:0;z-index: 99999;box-shadow:0 1px 7px #999;}
+header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
+.navi{float:right;}.navi input{display:none;}
+.navi ul{margin:0;padding:0}
+.navi li {display: inline-block; position: relative; z-index: 10;}
+.navi li a {text-transform: uppercase;font-size: 15px;font-weight:500;color: #777;display: block;padding:27px 20px 26px;text-decoration: none;}
+.navi li a:link,.menu li a:visited {color: #777;}
+.navi li a:hover{color: #444;}
+.navi li:before{content:'';height:4px;width:0;position:absolute;bottom:0;left:0;background:#ec1019;transition:all .4s ease-out}
+.navi li:hover:before{width:100%}
+
+#profil{position:relative;padding: 70px 0 0;}
+.propilbg{background-image: url(https://kencanabrebes.github.io/soundsystem/kencanasoundsystem%20.png);min-height:calc(100vh - 70px);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;padding: 0;margin: 0;}
+.propiltek{position: absolute;bottom: 20%;left: 0;text-align: center;padding: 40px 20%;margin: 0;}
+.propiltek p {font-size: 50px;font-weight: 700;color: #f1f1f1;margin: 0 0 15px;line-height: 1.3;text-shadow: 1px 1px #191919;}
+.propiltek b {font-size: 24px;padding: 0;margin: 0;color: #f1f1f1;line-height: 1.5;text-shadow: 1px 1px #191919;}
 
 #layanan{margin:-70px 0 0;padding:70px 10px 0;text-align:center;}
-p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0 15px;}
 #layanan b {font-size: 18px;color: #777;line-height: 1.5;font-weight: 500;margin: 0 0 25px;display: block;}
 .layanan{float:left; width:calc(33.3% - 20px);margin:10px;box-shadow:0 1px 3px #ddd;overflow:hidden;border-radius:3px;}
 .layanan amp-img{width:100%;height:auto;}
 .layanan p{text-align: center;font-weight: 400;}
+
 #phone{margin:-70px 0 0;padding: 70px 0 0;}
 #telepon{background-image: url(https://kencanabrebes.github.io/soundsystem/tenda_contact.png);height: 300px;background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;text-align: center;padding: 0 40px;margin: 0;position: relative;}
 #telepon:before {content: "";background-color: rgba(0,0,0,.1);position: absolute;top: 0;left: 0;bottom: 0;right: 0;z-index: 1;}
@@ -73,14 +88,24 @@ p.ats {font-size: 30px;color: #555;line-height: 1.3;font-weight: 700;margin: 0 0
 .tlepong a:link,.tlepong a:visited{display: block;line-height: 1em;color: #ed1a23;text-shadow: 1px 1px #fbfbfb;text-decoration: none;}
 .tlepong b{font-size: 66px;}
 .tlepong svg{vertical-align: -12px;margin: 0 10px 0 0;}
+
 #lokasi{margin:-70px 0 0;padding:90px 20px 30px;text-align: center;}
+  
+#open{}
+.wentis{}
+#wentis1{}
+#wentis2{}
+#wentis3{}
+.wentis p{}
+.wentis table{}
+  
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
 @media screen and (max-width: 1005px){
 header {max-width: 96px;padding: 10px;}
 .navi{margin: 0 5px 0 0;}
 .navi li a {font-size: 11px;padding:19px 5px 18px;}
-#propil {padding: 50px 0 0;}
+#profil {padding: 50px 0 0;}
 .propiltek {position: inherit;padding: 25px 10px;bottom: auto;background: #c44d52;}
 .propiltek p {line-height: 1.1;}
 .propiltek b {line-height: 1.3;}
@@ -108,7 +133,7 @@ footer {padding: 10px;}
 <div id='endas'>
 <header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
 <div class='navi'><input class='ngimput' type='checkbox'></input><span></span><nav><ul>                                                       
-<li><a href='#propil' title='Profil KENCANA Sound System'>Profil</a></li>
+<li><a href='#profil' title='Profil KENCANA Sound System'>Profil</a></li>
 <li><a href='#layanan' title='Layanan Kami'>Layanan</a></li>
 <li><a href='#phone' title='Hubungi Kami'>Telepon</a></li>
 <li><a href='#lokasi' title='Lokasi'>Alamat</a></li>
@@ -188,6 +213,32 @@ footer {padding: 10px;}
 <amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.623288601563!2d108.88036427892436!3d-6.935547124794509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539248349636"> </amp-iframe>
 </div>
 </div>
+  
+<div id='open'>
+<div class='nengah'>  
+<div id='wentis1' class='wentis'>
+  <p>KENCANA Sound System</p>
+KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, tenda/layos untuk keperluan hajatan, sunatan, pernikahan dan acara-acara besar lainnya. KENCANA Sound System berdiri dari tahun 1990an, yang terus mengikuti perkembangan jaman dalam dunia teknologi sound system.
+  </div>
+  <div id='wentis2' class='wentis'>
+<p>Jam Buka Kantor</p>
+<table>
+<tbody>
+<tr><td>Senin</td><td>07.00 - 17:00 WIB</td></tr>
+<tr><td>Selasa</td><td>07.00 - 17:00 WIB</td></tr>
+<tr><td>Rabu</td><td>07.00 - 17:00 WIB</td></tr>
+<tr><td>Kamis</td><td>07.00 - 17:00 WIB</td></tr>
+<tr><td>Jumat</td><td>07.00 - 11:00 WIB</td></tr>
+<tr><td>Sabtu</td><td>07.00 - 17:00 WIB</td></tr>
+<tr><td>minggu</td><td>07.00 - 17:00 WIB</td></tr>
+</tbody>
+</table>
+  </div>
+  <div id='wentis3' class='wentis'>
+<p>KENCANA Sound System</p> 
+  </div>
+</div>
+  </div>
   
 <footer>Copyright © 2018 | <a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'>KENCANA Sound System</a></footer>
   
