--- a/index.html
+++ b/index.html
@@ -91,13 +91,12 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
 
 #lokasi{margin:-70px 0 0;padding:90px 20px 30px;text-align: center;}
   
-#open{}
-.wentis{}
+#open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
+.wentis{float: left;padding: 0 15px;}
 #wentis1{}
-#wentis2{}
-#wentis3{}
-.wentis p{}
-.wentis table{}
+#wentis2{border-left: 1px solid #dbdbdb;}
+.wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;}
+.wentis table{width: 100%;}
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
@@ -216,8 +215,8 @@ footer {padding: 10px;}
   
 <div id='open'>
 <div class='nengah'>  
-<div id='wentis1' class='wentis'>
-  <p>KENCANA Sound System</p>
+<div id='wentis2' class='wentis'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' width='50' height='50' layout='responsive'/>
 KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, tenda/layos untuk keperluan hajatan, sunatan, pernikahan dan acara-acara besar lainnya. KENCANA Sound System berdiri dari tahun 1990an, yang terus mengikuti perkembangan jaman dalam dunia teknologi sound system.
   </div>
   <div id='wentis2' class='wentis'>
@@ -233,9 +232,6 @@ KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, t
 <tr><td>minggu</td><td>07.00 - 17:00 WIB</td></tr>
 </tbody>
 </table>
-  </div>
-  <div id='wentis3' class='wentis'>
-<p>KENCANA Sound System</p> 
   </div>
 </div>
   </div>
