--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
   
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
 .wentis{float: left;padding: 0 15px;}
-#wentis1{}
-#wentis2{border-left: 1px solid #dbdbdb;}
+#wentis1{width: calc(100% - 362px);}
+  #wentis amp-img{max-width:123px;float:left;margin:0 15px 0 0;}
+#wentis2{border-left: 1px solid #dbdbdb;width: 300px;}
 .wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;}
 .wentis table{width: 100%;}
   
@@ -215,8 +216,8 @@ footer {padding: 10px;}
   
 <div id='open'>
 <div class='nengah'>  
-<div id='wentis2' class='wentis'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' width='50' height='50' layout='responsive'/>
+<div id='wentis1' class='wentis'>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' width='50' height='50' layout='responsive'></amp-img>
 KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, tenda/layos untuk keperluan hajatan, sunatan, pernikahan dan acara-acara besar lainnya. KENCANA Sound System berdiri dari tahun 1990an, yang terus mengikuti perkembangan jaman dalam dunia teknologi sound system.
   </div>
   <div id='wentis2' class='wentis'>
