--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
 .wentis{float: left;padding: 0 15px;}
 #wentis1{width: calc(100% - 362px);}
-#wentis1 amp-img{max-width:123px;float:left;margin:0 15px 0 0;}
+#wentis1 amp-img{width:123px;float:left;margin:0 15px 0 0;}
 #wentis2{border-left: 1px solid #dbdbdb;width: 300px;}
 .wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;}
 .wentis table{width: 100%;}
