--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
 #lokasi{margin:-70px 0 0;padding:90px 20px 30px;text-align: center;}
   
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
-.wentis{float: left;padding: 0 15px;}
-#wentis1{width: calc(100% - 362px);}
-#wentis1 amp-img{width:123px;float:left;margin:0 15px 0 0;}
-#wentis2{border-left: 1px solid #dbdbdb;width: 300px;}
+.wentis{float: right;padding: 0 15px;}
+#wentis2{width: calc(100% - 362px);}
+#wentis2 amp-img{width:123px;float:left;margin:0 15px 0 0;}
+#wentis1{border-right: 1px solid #dbdbdb;width: 300px;}
 .wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;}
 .wentis table{width: 100%;}
   
@@ -217,10 +217,6 @@ footer {padding: 10px;}
 <div id='open'>
 <div class='nengah'>  
 <div id='wentis1' class='wentis'>
-<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' width='50' height='50' layout='responsive'></amp-img>
-KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, tenda/layos untuk keperluan hajatan, sunatan, pernikahan dan acara-acara besar lainnya. KENCANA Sound System berdiri dari tahun 1990an, yang terus mengikuti perkembangan jaman dalam dunia teknologi sound system.
-  </div>
-  <div id='wentis2' class='wentis'>
 <p>Jam Buka Kantor</p>
 <table>
 <tbody>
@@ -233,7 +229,12 @@ KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, t
 <tr><td>minggu</td><td>07.00 - 17:00 WIB</td></tr>
 </tbody>
 </table>
-  </div>
+</div>
+<div id='wentis2' class='wentis'>
+<p>KENCANA Sound System</p>
+<amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/KENCANA_Soundsystem_favicon180.png' width='50' height='50' layout='responsive'></amp-img>
+KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, tenda/layos untuk keperluan hajatan, sunatan, pernikahan dan acara-acara besar lainnya. KENCANA Sound System berdiri dari tahun 1990an, yang terus mengikuti perkembangan jaman dalam dunia teknologi sound system.
+</div>
 </div>
   </div>
   
