--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
 .wentis{float: right;padding: 0 15px;}
 #wentis2{width: calc(100% - 362px);}
-#wentis2 amp-img{width:123px;float:left;margin:0 15px 0 0;}
-#wentis1{border-right: 1px solid #dbdbdb;width: 300px;}
-.wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;}
+#wentis2 amp-img{width:160px;float:left;margin:0 15px 0 0;}
+#wentis2 p{0 0 20px}
+#wentis1{border-left: 1px solid #dbdbdb;width: 300px;}
+.wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;margin: 0 0 15px;}
 .wentis table{width: 100%;}
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
