--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
   
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
 .wentis{float: right;padding: 0 15px;}
+.wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;margin: 0 0 15px;}
+#wentis1{border-left: 1px solid #dbdbdb;width: 300px;}
+#wentis1 table{width: 100%;}
+#wentis1 table tr td:nth-child(2){text-align:right;}
 #wentis2{width: calc(100% - 362px);}
 #wentis2 amp-img{width:160px;float:left;margin:0 15px 0 0;}
-#wentis2 p{0 0 20px}
-#wentis1{border-left: 1px solid #dbdbdb;width: 300px;}
-.wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;margin: 0 0 15px;}
-.wentis table{width: 100%;}
+#wentis2 p{margin:0 0 20px}
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
 
@@ -137,6 +138,7 @@ footer {padding: 10px;}
 <li><a href='#profil' title='Profil KENCANA Sound System'>Profil</a></li>
 <li><a href='#layanan' title='Layanan Kami'>Layanan</a></li>
 <li><a href='#phone' title='Hubungi Kami'>Telepon</a></li>
+<li><a href='#open' title='Buka'>Jam Buka</a></li>
 <li><a href='#lokasi' title='Lokasi'>Alamat</a></li>
 </ul></nav></div>
 </div>
