--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ header{float:left;max-width: 160px;width:100%;padding: 10px 20px;}
 #lokasi{margin:-70px 0 0;padding:90px 20px 30px;text-align: center;}
   
 #open{margin: -70px 0 0;padding: 70px 5px 30px;font-size: 19px;font-weight: 300;}
+#open .nengah{border-top: 1px solid #dbdbdb;}
 .wentis{float: right;padding: 0 15px;}
 .wentis p{text-align: center;font-weight: 500;font-size: 19px;color: #cf3b41;margin: 0 0 15px;}
 #wentis1{border-left: 1px solid #dbdbdb;width: 300px;}
