--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@ p.ats {margin: 0 0 5px;}
 .tlepong svg {vertical-align: 0;margin: 0 0 13px;}
 .tlepong b {font-size: 37px;display: block;}
 #lokasi {margin: -50px 0 0;padding: 40px 5px 0;}
+#open {margin: -50px 0 0;padding: 35px 5px 0px;font-size: 16px;}
+#open .nengah {border-top: none;}
+.wentis {float: none;padding: 0;}
+#wentis1 {border-left: none;width: 100%;}
+#wentis1 table {max-width: 200px;margin: 0 auto;}
+#wentis2 {width: 100%;border-top: 1px solid #ddd;padding: 15px 0 0;margin: 15px 0 0;}
 footer {padding: 10px;}
 }
 </style>
