--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ p.ats {margin: 0 0 5px;}
 #wentis1 {border-left: none;width: 100%;}
 #wentis1 table {max-width: 200px;margin: 0 auto;}
 #wentis2 {width: 100%;border-top: 1px solid #ddd;padding: 15px 0 0;margin: 15px 0 0;}
+#wentis2 amp-img {width: 100px;margin: 0 10px 10px 0;}
 footer {padding: 10px;}
 }
 </style>
