--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@ header {max-width: 96px;padding: 10px;}
 .navi input:checked ~ span {background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z' fill='%23666'/%3E%3C/svg%3E");background-size: 34px 34px;right: 1px;}
 .navi input:checked ~ nav {display: block;}
 nav{top:50px;background: rgba(0, 0, 0, .8);display: none;height: 100%;position: fixed;width: 100%;left: 0;right: 0;margin: 0 auto;}
-nav ul{background: #c44d52;text-align: center;}
+nav ul{background: #c44d52;text-align: center;box-shadow: 0 1px 7px #999;}
 .navi li a:link, .menu li a:visited {color: #fbfbfb;}
 .navi li a {font-size: 11px;padding:10px 5px;color: #fbfbfb;}
+.navi li a:hover {color: #000;}
+.navi li:before {height: 2px;background: #fbfbfb;}
 #profil {padding: 50px 0 0;}
 .propiltek {position: inherit;padding: 25px 10px;bottom: auto;background: #c44d52;}
 .propiltek p {line-height: 1.1;}
