--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 
 
 @media screen and (max-width: 1005px){
 header {max-width: 96px;padding: 10px;}
+p.ats {margin: 0 0 5px;font-size: 20px;}
 .navi input {display: inline-block;position: absolute;right: 15px;top: 5px;width: 40px;z-index: 9999;margin: 0 0;padding: 0 0;height: 40px;opacity: 0;cursor: pointer;}
 .navi span{background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z' fill='%23666'/%3E%3C/svg%3E"); background-repeat: no-repeat;background-position: left center;background-size: 40px 40px;width: 40px;height: 40px;position: absolute;z-index: 999;top: 5px;right: 5px;}
 .navi input:checked ~ span {background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z' fill='%23666'/%3E%3C/svg%3E");background-size: 34px 34px;right: 1px;}
@@ -113,7 +114,7 @@ header {max-width: 96px;padding: 10px;}
 nav{top:50px;display: none;position: fixed;width: 100%;left: 0;right: 0;}
 nav ul{background: #c44d52;text-align: center;box-shadow: 0 1px 7px #999;}
 .navi li a:link, .menu li a:visited {color: #fbfbfb;}
-.navi li a {font-size: 11px;padding:10px 5px;color: #fbfbfb;}
+.navi li a {font-size: 11px;padding:11px 5px;color: #fbfbfb;}
 .navi li a:hover {color: #000;}
 .navi li:before {height: 2px;background: #fbfbfb;}
 #profil {padding: 50px 0 0;}
@@ -122,18 +123,18 @@ nav ul{background: #c44d52;text-align: center;box-shadow: 0 1px 7px #999;}
 .propiltek b {line-height: 1.3;}
 .propilbg {background-attachment: scroll;min-height: 250px;height: 250px;}
 .nengah {padding: 20px 5px;}
-#layanan {margin: -50px 0 0;padding: 50px 0 0;}
-p.ats {margin: 0 0 5px;}
+#layanan {margin: -85px 0 0;padding: 85px 0 0;}
 #layanan b {line-height: 1;margin: 0 0 10px;}
 .layanan {width: calc(50% - 10px);margin: 5px;}
 .layanan p {margin: 10px;}
+#phone {margin: -85px 0 0;padding: 90px 0 0;}
 #telepon {height: 228px;}
 #telepon p {line-height: 1;}
 .tlepong {width: calc(100% - 20px);top: 20px;padding: 0 10px;}
 .tlepong svg {vertical-align: 0;margin: 0 0 13px;}
 .tlepong b {font-size: 37px;display: block;}
-#lokasi {margin: -50px 0 0;padding: 40px 5px 0;}
-#open {margin: -50px 0 0;padding: 35px 5px 0px;font-size: 16px;}
+#lokasi {margin: -85px 0 0;padding: 85px 5px 0;}
+#open {margin: -85px 0 0;padding: 85px 5px 0px;font-size: 16px;}
 #open .nengah {border-top: none;}
 .wentis {float: none;padding: 0;}
 #wentis1 {border-left: none;width: 100%;}
