--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@ footer {padding: 10px;}
 <div id='lokasi'>
 <div class='nengah'>
 <p class='ats'>Lokasi Kami</p>
-<amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.623288601563!2d108.88036427892436!3d-6.935547124794509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc797b0da3d7c66d9!2sKENCANA+Steel+-+Minimarket+Besi+%26+Aksesoris!5e0!3m2!1sid!2sid!4v1539248349636"> </amp-iframe>
+<amp-iframe width="200" height="100" sandbox="allow-scripts allow-same-origin" layout="responsive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.6348622476835!2d108.87927261477297!3d-6.934170594990043!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6289faf0dc92a8f3!2sKENCANA+Sound+System+%7C+Brebes!5e0!3m2!1sid!2sid!4v1542787684028"> </amp-iframe>
 </div>
-</div>
+</div>  
   
 <div id='open'>
 <div class='nengah'>  
