--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ footer {padding: 10px;}
 <body>
 
 <div id='endas'>
-<header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'><amp-img noloading='' src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
+<header><a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System Brebes'><amp-img noloading='' alt='KENCANA Sound System Brebes' src='https://kencanabrebes.github.io/soundsystem/header_kencanasoundsystem.png' width='160' height='50' layout='responsive'/></a></header>
 <div class='navi'><input type='checkbox'></input><span></span><nav><ul>                                                       
 <li><a href='#profil' title='Profil KENCANA Sound System'>Profil</a></li>
 <li><a href='#layanan' title='Layanan Kami'>Layanan</a></li>
@@ -180,27 +180,27 @@ footer {padding: 10px;}
 <b>Pilih layanan dan Biarkan kami yang mengurus semuanya.</b>
 <div class='resik'></div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/soundsystem-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Sound System</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/panggung-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Panggung</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/lighting-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Lighting</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/tendalayos-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Tenda/Layos</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/prasmanan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/prasmanan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Prasmanan</p>
 </div>
 <div class='layanan'>
-<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah' src='https://kencanabrebes.github.io/soundsystem/dekorpelaminan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
+<amp-img noloading='' alt='Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes' src='https://kencanabrebes.github.io/soundsystem/dekorpelaminan-kencana.jpg' width='336' height='224' layout='responsive'></amp-img>
 <p>Pelaminan</p>
 </div>
 </div>
