--- a/index.html
+++ b/index.html
@@ -161,17 +161,23 @@ footer {padding: 10px;}
 </div>
 
 <div class='ting'><h1>Jasa Sewa/Penyewaan Sound System Gantung/Hajatan/Pernikahan / untuk Konser | Murah - Brebes</h1>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_balance.jpg' width='3' height='2'></amp-img>
 <p>Kencana sound system hadir untuk menawarkan jasa sewa sound system wilayah brebes dengan harga murah, jasa sewa sound system kami berkualitas dan insyaAllah tidak akan mengecewakan customer. Jasa sewa  sound system brebes kami dapat digunakan untuk berbagai keperluan, seperti konser music, pengajian dan hajatan.<p>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_kaos.jpg' width='3' height='2'></amp-img>
 <p>Sewa sound system Kencana kami sangat mengutamakan sekali terhadap kualitas suara yang dihasilkan, karena kami berharap agar customer dari Jasa penyewaan sound syatem KENCANA Brebes ini tidak akan kecewa. KENCANA brebes Penyewaan Sound system mempunyai bermacam model diantaranya Sound system gantung, sound system hajatan, sound system pernikahan dan sound system untuk konser.</p>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_punggung.jpg' width='3' height='2'></amp-img>
 </div>
   
 <div id='profil'><div class='propilbg'></div><div class='propiltek'><p>KENCANA Sound System</p><b>Jasa Penyewaan Sound System, Panggung, Lighting, Perlengkapan Hajatan Dan Pengantin - Wilayah Kabupaten Brebes.</b></div></div>
 
 <div class='ting'>
 <h2>Sewa Sound System Murah - Brebes</h2>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_gantung.jpg' width='3' height='2'></amp-img>
 <p>Kami menawarkan jasa sewa sound system murah tetapi dengan kualitas tidak murahan, dengan harga terjangkau yang berani bersaing kualitas dan harga dengan sound system lain yang ada di wilayah brebes, bukan sombong tetapi ini hanya promo dengan harga miring :p</p>
 <h3>Harga Sewa Sound System Gantung - Brebes</h3>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_mixer.jpg' width='3' height='2'></amp-img>
 <p>Dengan model  terbaru yaitu sound system gantung, kami akan memberikan harga sewa sound system gantung yang sangat terjangkau untuk berbagai kalangan dan berbagai keperluan seperi hajatan, pernikahan , pengajian dan konser.</p>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_sipur.jpg' width='3' height='2'></amp-img>
 </div>
   
 <div id='layanan'>
@@ -222,9 +228,12 @@ footer {padding: 10px;}
   
 <div class='ting'>
 <h4>Harga Sewa Sound System Hajatan - Brebes</h4>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_jinonk.jpg' width='3' height='2'></amp-img>
 <p>Untuk berbagai kalangan pun kami memberikan harga dan kualitas yang baik, harga sewa sound system hajatan mialnya, kami memberikan paket komplit seperti tenda/layos kursi peralatan makan(prasmanan) penerangan dan sebagainya, tentunya dengan harga pas untuk wilayah brebes.</p>
 <h5>harga sewa sound system untuk konser - Brebes</h5>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_pengajian.jpg' width='3' height='2'></amp-img>
 <p>Untuk even besarpun kami sanggup memberikan  dan memenuhi standard kualitas sound system yang baik, seperti harga sewa sound system untuk konser  kami berikan harga murah se wilayah brebes.</p>
+<amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_speaker.jpg' width='3' height='2'></amp-img>
 </div>
 
 <div id='lokasi'>
@@ -257,6 +266,8 @@ KENCANA Sound Sytem merupakan jasa penyewaan sound system, lighting, panggung, t
 </div>
 </div>
   </div>
+  
+<div class='ting'><amp-img alt='KENCANA Sound System | Brebes' src='https://kencanabrebes.github.io/soundsystem/kencana-sound-system-brebes_yayan.jpg' width='3' height='2'></amp-img></div>
   
 <footer>Copyright © 2018 | <a href='https://kencanabrebes.github.io/soundsystem/' title='KENCANA Sound System'>KENCANA Sound System</a></footer>
   
